proj0/tests/error/misnamed.inp
* D BETA III II I ACCA
DSF SFD SFD